
// SPDX-License-Identifier: MIT
// Copyright (c) 2024 nyashbox

syntax = "proto3";

package guidemyride.services.auth;

service AuthService {
	// TODO: add code here 
}
